examples/test/testpolicy7558.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7558
  namespace: namespace423
spec:
  podSelector:
    matchLabels:
      key1: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value34
          key48: value27
      podSelector:
        matchLabels:
          key46: value25
          key45: value1
          key18: value5
